# data_analysis_app_weatherAPI

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: app_weather_analysis.yml
app/: app.py  logging_config.py  utils.py
app/notebooks/: data_analysis.ipynb  generated_data.ipynb
app/pages/: analysis.py  current_temperature.py  data_analysis.py  data_upload.py  visualization.py
app/settings/: api_client.py
data/: temperature_data.csv
tests/: test_app.py
