[tool.poetry]
name = "data-analysis-app"
version = "0.1.0"
description = ""
authors = ["storkprg <nikdfil@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.41.1"
numpy = "^2.2.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
pyowm = "^3.3.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
